# projecteweb2023-2

./: api1.py  api2.py  pyproject.toml  web1.py
eazytapes/: manage.py
eazytapes/eazytapes/: asgi.py  settings.py  urls.py  wsgi.py
eazytapes/web/: admin.py  models.py  views.py
eazytapes/web/migrations/: 0001_initial.py
eazytapes/web/templates/web/: bar.html  index.html  tapa.html
webclient/: README.md
